<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.InputActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:text="@string/category" />

            <TextView
                android:id="@+id/text_category_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_category_label"
                android:layout_toEndOf="@id/text_category_label"
                android:text="@string/defaultText"
                android:layout_centerVertical="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dip"
            android:background="#FF000000" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/text_wordgroup_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:text="@string/word" />

            <EditText
                android:id="@+id/etext_search_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_word"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/text_wordgroup_label"
                android:layout_toEndOf="@+id/text_wordgroup_label" />

        </RelativeLayout>

        <ListView
            android:id="@+id/list_wordgroupSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice" />

        <TabHost
            android:id="@android:id/tabhost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="62dp">

                    <LinearLayout
                        android:id="@+id/tabDetails"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/cbox_mainbuzz"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mainbuzz"
                            android:checked="false" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tabSynonyms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ListView
                            android:id="@+id/list_synonyms"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:choiceMode="singleChoice" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tabLinks"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ListView
                            android:id="@+id/list_links"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:choiceMode="singleChoice" />

                    </LinearLayout>

                </FrameLayout>

        </TabHost>

        <!--<LinearLayout-->
            <!--android:id="@+id/LinearLayout02"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_width="fill_parent">-->
            <!--<Button-->
                <!--android:id="@+id/btn_cancel"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/cancel">-->
            <!--</Button>-->
            <!--<Button-->
                <!--android:id="@+id/btn_save"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/save">-->
            <!--</Button>-->
        <!--</LinearLayout>-->



    </LinearLayout>

</RelativeLayout>
